--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -17,6 +17,7 @@ jobs:
 - name: test-app
   plan:
   - get: flight-school
+    trigger: true
   - task: tests
     file: flight-school/build.yml
   - put: staging-app
